cmake_minimum_required(VERSION 3.17)
project(Tema1_POO)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tema1_POO main.cpp Instrument_muzical.h Instrument_muzical.cpp Persoana.h Persoana.cpp Muzicant.h Muzicant.cpp Formatie.h Formatie.cpp Melodie.h Melodie.cpp Vocalist.h Vocalist.cpp Turneu.h Turneu.cpp Utilitati.h Utilitati.cpp Local.h Exceptii.h Cantaret.h Cantaret.cpp portable_file_dialogs.h)